corrected vertical align for icons in header's buttons

--- a/falcon-ui/app/css/styles/nav-header.less
+++ b/falcon-ui/app/css/styles/nav-header.less
@@ -72,6 +72,16 @@
     cursor: pointer;
     background-color: transparent;
   }
+  span {
+    vertical-align: middle;
+    margin-right: 6px;
+    &.entypo, &.glyphicon{
+      vertical-align: sub;
+      &.up{
+        font-size: 2.2em;
+      }
+    }
+  }
   .disabled {
     //color: lighten(@headerNavBG, 30%);
     //border-color: lighten(@headerNavBG, 10%);
